SDKs/apideck.com/webhook/8.85.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.WebhooksAddRequest{
        Security: operations.WebhooksAddSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        Headers: operations.WebhooksAddHeaders{
            XApideckAppID: "quidem",
        },
        Request: shared.CreateWebhookRequest{
            DeliveryURL: "incidunt",
            Description: "ratione",
            Events: []shared.WebhookEventTypeEnum{
                "crm.lead.updated",
            },
            Status: "enabled",
            UnifiedAPI: "transactional-email",
        },
    }
    
    res, err := s.Webhooks.WebhooksAdd(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.CreateWebhookResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Webhooks

* `WebhooksAdd` - Create webhook
* `WebhooksAll` - List webhooks
* `WebhooksDelete` - Delete webhook
* `WebhooksExecute` - Execute a webhook
* `WebhooksOne` - Get webhook
* `WebhooksResolve` - Resolve and Execute a connection webhook
* `WebhooksShortExecute` - Execute a webhook
* `WebhooksUpdate` - Update webhook

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
